# lovesynths-preset-editor

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  fonts.rs  main.rs  utils.rs
src/components/: mod.rs  preset_image.rs  preset_list.rs
src/presets/: lsi_parser.rs  mod.rs
src/styles/: button_style.rs  mod.rs  preset_button_style.rs
src/types/: mod.rs
