[package]
name = "preset-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
font-awesome = "0.2.0"
iced = { version = "0.12.1", features = ["lazy", "advanced", "canvas"] }
itertools = "0.13.0"
nom = "7.1.3"
serde = { version="1.0.159", features = ["derive"] }
serde_json = "1.0"
tap = "1.0.1"
rfd = "0.14.1"